--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ window.onload = async () => {
   <div class="container my-4 mx-0">
   <p>Design: <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a></p>
   <p>Lib: <a href="https://github.com/code4fukui/SHA256">SHA256.js</a> (「<a href=https://www.cryptrec.go.jp/method.html>電子政府推奨暗号リスト - CRYPTREC暗号の仕様書</a>」掲載ハッシュ関数)</p>
-  <p>App: CC BY <a href="https://fukuno.jig.jp/3672">福野泰介の一日一創</a> by <a href="https://twitter.com/taisukef">@taisukef</a> (<a href=https://github.com/code4fukui/SHA512/>src on GitHub</a>)</p>
+  <p>App: CC BY <a href="https://fukuno.jig.jp/3672">福野泰介の一日一創</a> by <a href="https://twitter.com/taisukef">@taisukef</a> (<a href=https://github.com/code4fukui/csvhash/>src on GitHub</a>)</p>
   </div>
 </footer>
 
